Added search messages functionality

--- a/Messenger/Views/Home/Index.cshtml
+++ b/Messenger/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="col-2 padding-10">
-                    <input type="text" class="form-control-sm" size="15" placeholder="search">
+                    <input type="text" class="form-control-sm" size="15" placeholder="search" oninput="SearchMessages()" id="searchMsgInput">
                 </div>
             </div>
         </div>
