--- a/Messenger/Content/Site.css
+++ b/Messenger/Content/Site.css
@@ -61,6 +61,19 @@
     top: -5px;
 }
 
+.chat-counter {
+    position: relative;
+    left: 180px;
+    bottom: 58px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    background: #9db8c6;
+    margin: 1em;
+    border-radius: 50%;
+    text-align: center;
+}
+
 .message-in-panel {
     position: relative;
     top: 20px;
@@ -68,13 +81,13 @@
 
 .message-col {
     border-left: solid #707070 3px;
-    font-size: 14px;
+    font-size: 18px;
     height:500px;
 }
 
 .message {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding: 0px 40px;
+    margin: 0px 0px;
     color: #111111;
 }
 
@@ -83,18 +96,39 @@
     }
 
 .message-sender {
+    display: inline-block;
     font-size: 18px;
     color: #555555;
+    width: 80px;
 }
 
 .message-text {
-    width: 620px;
-    margin-left:100px;
+    display:inline-block;
+    width: 430px ;
+    margin-left: 100px;
 }
+    .message-unread-circle{
+        display: inline-block;
+        width: 5px;
+        height: 5px;
+        background-color: darkblue;
+        border-radius: 5px;
+        visibility:hidden;
+    }
+
+
+    .message-text div {
+        word-wrap: break-word;
+        width: 430px;
+    }
 
 .message-time {
     display: inline-block;
     margin-left: 30px;
+    position: relative;
+    left: 50px;
+    margin: 0px 0px;
+    padding: 0px 0px;
 }
 
 .message-writing {
@@ -107,6 +141,7 @@
     left:30px;
     display:inline-block;
     width:600px;
+    resize: none;
 }
 
 .input-inline {
@@ -118,6 +153,13 @@
     color:#FFFFD9;
     border-radius:30px;
     width:100px;
+}
+
+input[type="file"]{
+    font-size: 10px;
+    position:relative;
+    left:315px;
+    top:10px;
 }
 
     .input-inline:hover {
@@ -143,4 +185,16 @@
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+.active-chatter {
+    background-color: #cccedb !important;
+}
+
+.no-padding-right {
+    padding-right: 0 !important;
+}
+
+.no-padding-left {
+    padding-left: 0 !important;
 }
