--- a/Messenger/Views/Message/Message.cshtml
+++ b/Messenger/Views/Message/Message.cshtml
@@ -4,9 +4,9 @@
 {
     <div class="message">
         <span class="message-sender">
-            @using (Messenger.Models.MessengerDBEntities context = new Messenger.Models.MessengerDBEntities())
+            @using (var context = new Messenger.Models.MessengerDBEntities())
             {
-                @context.Users.Where(u => u.Id == m.Sender).FirstOrDefault().NameToString()
+                @context.Users.Where(u => u.Id == m.Sender).FirstOrDefault().UserName;
             }
         </span>
         <span class="message-unread-circle"></span>
