--- a/Messenger/Views/Admin/Admin.cshtml
+++ b/Messenger/Views/Admin/Admin.cshtml
@@ -65,13 +65,13 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="name-addon">Имя</span>
                                     </div>
-                                    <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="name-addon">
+                                    <input name="username" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="name-addon" required>
                                 </div>
                                 <div class="input-group mb-3">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="pass-addon">Пароль</span>
                                     </div>
-                                    <input name="password" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="pass-addon">
+                                    <input name="password" type="text" class="form-control" placeholder="Password" aria-label="Password" aria-describedby="pass-addon" required>
                                 </div>
                                 <div class="add-user-block-top-footer">
                                     <input type="submit" class="btn btn-default button button-user-add" id="button-user-add" value="Добавить">
