Implemented sending files

--- a/Messenger/Views/Message/Message.cshtml
+++ b/Messenger/Views/Message/Message.cshtml
@@ -12,7 +12,7 @@
         <span class="message-unread-circle"></span>
         <span class="message-text">
             <div>
-            @m.Text
+                @Html.Raw(m.Text)
             </div>
         </span>
         <span class="message-time">
