Raw html in text of message

--- a/Messenger/Views/Message/Message.cshtml
+++ b/Messenger/Views/Message/Message.cshtml
@@ -14,7 +14,7 @@
             <span class="message-unread-circle"></span>
             <span class="message-text">
                 <div>
-                    @m.Text
+                    @Html.Raw(m.Text)
                 </div>
             </span>
             <span class="message-time">
@@ -34,7 +34,7 @@
             <span class="message-unread-circle"></span>
             <span class="message-text">
                 <div>
-                    @m.Text
+                    @Html.Raw(m.Text)
                 </div>
             </span>
             <span class="message-time">
