--- a/Messenger/Views/Home/Index.cshtml
+++ b/Messenger/Views/Home/Index.cshtml
@@ -5,12 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Messenger</title>
     @Styles.Render("~/Content/Site")
-    @Styles.Render("~/Content/vendorBootstrap")
-    @Styles.Render("~/Content/vendor")
+    @Styles.Render("~/Content/Bootstrap")
 </head>
 <body>
     <div class="container">
@@ -41,9 +38,9 @@
                 <div class="col-3 no-padding-right">
                     @foreach (var chat in Model)
                     {
-                        <div class="block-chatter" id="@chat.chatId" onclick="ClickOnChat(@chat.chatId, @chat.Receiver, '@chat.partnerFullName')">
+                        <div class="block-chatter" id="@chat.ChatId" onclick="ClickOnChat(@chat.ChatId, @chat.Receiver, '@chat.PartnerFullName')">
                             <img src="" class="img-user" alt="">
-                            <span class="name-in-panel">@chat.partnerFullName</span>
+                            <span class="name-in-panel">@chat.PartnerFullName</span>
                             <div class="chat-counter">0</div>
                         </div>
                     }
@@ -76,12 +73,9 @@
     </div>
 
     @Scripts.Render("~/vendor/scripts")
-    @Scripts.Render("~/bundles/vendorbootstrap")
     @Scripts.Render("~/app/scripts")
 
-    <!--Ссылка на библиотеку SignalR -->
     <script src="~/Scripts/jquery.signalR-2.4.0.min.js"></script>
-    <!--Ссылка на автоматически сгенерированный скрипт хаба SignalR -->
     <script src="~/signalr/hubs"></script>
     <script src="~/Scripts/util.js"></script>
 
