--- a/Messenger/Views/Message/Message.cshtml
+++ b/Messenger/Views/Message/Message.cshtml
@@ -4,23 +4,32 @@
 {
     if (m.Sender == ViewBag.myId)
     {
-        <div class="message my-message">
-            <span class="message-sender">
-                @using (var context = new Messenger.Models.MessengerDBEntities())
-                {
-                    @context.Users.FirstOrDefault(u => u.Id == m.Sender).UserName
-                }
-            </span>
-            <span class="message-unread-circle"></span>
-            <span class="message-text">
-                <div>
-                    @Html.Raw(m.Text)
-                </div>
-            </span>
-            <span class="message-time">
-                @m.DateTime.ToShortTimeString()
-            </span>
+<div class="message my-message">
+    <span class="message-sender">
+        @using (var context = new Messenger.Models.MessengerDBEntities())
+        {
+            @context.Users.FirstOrDefault(u => u.Id == m.Sender).UserName
+        }
+    </span>
+
+    @if (m.IsReaded == true)
+    {
+        <span class=""></span>
+    }
+    else if(m.IsReaded == false)
+    {
+        <span class="message-unread-circle"></span>
+    }
+
+    <span class="message-text">
+        <div>
+            @Html.Raw(m.Text)
         </div>
+    </span>
+    <span class="message-time">
+        @m.DateTime.ToLocalTime().ToString("HH:mm dd.MM.yyyy")
+    </span>
+</div>
     }
     else
     {
@@ -31,14 +40,23 @@
                     @context.Users.FirstOrDefault(u => u.Id == m.Sender).UserName
                 }
             </span>
-            <span class="message-unread-circle"></span>
+
+            @if (m.IsReaded == true)
+            {
+                <span class=""></span>
+            }
+            else if(m.IsReaded == false)
+            {
+                <span class="message-unread-circle"></span>
+            }
+
             <span class="message-text">
                 <div>
                     @Html.Raw(m.Text)
                 </div>
             </span>
             <span class="message-time">
-                @m.DateTime.ToShortTimeString()
+                @m.DateTime.ToLocalTime().ToString("HH:mm dd.MM.yyyy")
             </span>
         </div>
     }
