--- a/Messenger/Views/Login/Login.cshtml
+++ b/Messenger/Views/Login/Login.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale=1.0">
-    @Styles.Render("~/Content/vendorBootstrap")
+    @Styles.Render("~/Content/Bootstrap")
     @Styles.Render("~/Content/login_style")
     @Scripts.Render("~/scripts/bootstrap")
     <title>Login_form</title>
