Notification sound added

--- a/Messenger/Views/Home/Index.cshtml
+++ b/Messenger/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                 <div class="col-2 text-center settings-block padding-10">
                     <div class="btn btn-secondary sound-button" id="sound-button" onclick="SoundClick()">
                         <a href="#" class="sound-link" id="sound-link">
-                            Sound on
+                            Звук вкл.
                         </a>
                     </div>
                 </div>
@@ -99,6 +99,8 @@
         window.onload = function () {
             window.myId = @ViewBag.MyId;
         };
+
+        window.sound = true;
     </script>
 
 </body>
