--- a/Messenger/Views/Admin/Admin.cshtml
+++ b/Messenger/Views/Admin/Admin.cshtml
@@ -11,8 +11,7 @@
 
     <title>Admin page</title>
 
-    @Styles.Render("~/Content/vendorBootstrap")
-    @Styles.Render("~/Content/vendor")
+    @Styles.Render("~/Content/Bootstrap")
     @Styles.Render("~/Content/admin_style")
 
 </head>
