Fixed all things that i remember

--- a/Messenger/Views/Admin/Contacts.cshtml
+++ b/Messenger/Views/Admin/Contacts.cshtml
@@ -22,6 +22,5 @@
     </div>
 }
 <div class="user-contacts-footer">
-    <button type="button" class="btn btn-default button button-check-save" id="button-user-add">Сохранить</button>
-    <button type="button" class="btn btn-default button button-check-cancel" id="button-user-add">Отменить</button>
+    <button type="button" class="btn btn-default button button-ok" onclick="CloseContactsForm()" id="button-ok">Ок</button>
 </div>
