--- a/Messenger/Content/Admin_style.css
+++ b/Messenger/Content/Admin_style.css
@@ -1,26 +1,37 @@
 ﻿@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
+.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto{
+    padding: 0;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
 }
 
 .top {
     background-color: #eeeeee;
-    padding: 10px 10px;
+    padding: 10px 20px;
+
+}
+
+.centered-vertical {
+    align-items: center;
 }
 
 .row {
-    padding: 0px 30px;
+    padding: 0px 0px;
 }
 
 .left-part {
     max-width: 700px;
     margin-top: 10px;
+    margin-left: 15px;
 }
 
 .users-list {
     background-color: #eeeeee;
-    padding: 10px 10px;
+    padding: 10px 0px;
 }
 
 .users-list-top p {
@@ -37,6 +48,7 @@ body {
     background-color: #fff;
     border: 1px solid #999;
     color: #999;
+    font-size:15px;
 }
 
     .button:hover {
@@ -55,6 +67,14 @@ body {
 
 .inline-block-el {
     display: inline-block;
+    max-width: 100%;
+}
+
+.username-in-panel {
+    word-wrap: break-word;
+    width: 100%;
+    display:inline-block;
+ 
 }
 
 .pass-input {
@@ -73,6 +93,7 @@ body {
 
 .right-part {
     margin-top: 10px;
+    margin-left: 30px;
     background-color: #eee;
     display: none;
 }
@@ -116,4 +137,5 @@ body {
 
 .user-contacts-footer {
     padding-bottom: 10px;
+    text-align: center;
 }
